results/classifier/105/instruction/1767176
instruction: 0.868
other: 0.863
device: 0.849
semantic: 0.843
network: 0.838
graphic: 0.822
boot: 0.816
vnc: 0.812
socket: 0.810
mistranslation: 0.749
KVM: 0.749
assembly: 0.724

GTK build fails with qemu 2.12.0

With the 2.12.0 release of QEMU passing `--enable-gtk` to configure causes the build to fail. I'm running macOS 10.13.5 with Xcode 9.3 FWIW.

I'm building against GTK 2.24.32, which I appreciate is no longer the preferred version here, but I don't think the error is related to that aspect. I'll try and find the time later to attempt a GTK3 build to check that though.

```
ui/gtk.c:1147:16: error: use of undeclared identifier 'qemu_input_map_osx_to_qcode'; did you mean 'qemu_input_map_usb_to_qcode'?
        return qemu_input_map_osx_to_qcode;
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~
               qemu_input_map_usb_to_qcode
/private/tmp/qemu-20180426-60786-1av6pq8/qemu-2.12.0/include/ui/input.h:99:22: note: 'qemu_input_map_usb_to_qcode' declared here
extern const guint16 qemu_input_map_usb_to_qcode[];
                     ^
```

I tried poking around locally by applying the following diff, based off of a very brief glance over the code involved, but that simply causes the build to error out in a different way at a later point, so I assume I'm doing something stupid.


```
diff --git a/Makefile b/Makefile
index d71dd5b..e857c3c 100644
--- a/Makefile
+++ b/Makefile
@@ -313,6 +313,7 @@ KEYCODEMAP_FILES = \
 		 ui/input-keymap-qnum-to-qcode.c \
 		 ui/input-keymap-usb-to-qcode.c \
 		 ui/input-keymap-win32-to-qcode.c \
+		 ui/input-keymap-osx-to-qcode.c \
 		 ui/input-keymap-x11-to-qcode.c \
 		 ui/input-keymap-xorgevdev-to-qcode.c \
 		 ui/input-keymap-xorgkbd-to-qcode.c \
diff --git a/include/ui/input.h b/include/ui/input.h
index 16395ab..8183840 100644
--- a/include/ui/input.h
+++ b/include/ui/input.h
@@ -101,6 +101,9 @@ extern const guint16 qemu_input_map_usb_to_qcode[];
 extern const guint qemu_input_map_win32_to_qcode_len;
 extern const guint16 qemu_input_map_win32_to_qcode[];
 
+extern const guint qemu_input_map_osx_to_qcode_len;
+extern const guint16 qemu_input_map_osx_to_qcode[];
+
 extern const guint qemu_input_map_x11_to_qcode_len;
 extern const guint16 qemu_input_map_x11_to_qcode[];
```

Reproduces with GTK+3 rather than GTK+ as expected, FWIW.

Resolved via https://git.qemu.org/?p=qemu.git;a=patch;h=656282d245b49b84d4a1a47d7b7ede482d541776, FYI.

